index.css
@import url('https://fonts.googleapis.com/css2?family=Niconne&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');

*,
*:root {
    box-sizing: border-box;
    font-family: 'Raleway', sans-serif;
    --clr-brown-100: #F3EEEA;
    --clr-brown-200: #FAE8DA;
    --clr-brown-300: #C5A5A3;
    --clr-brown-400: #FCE9E0;
    --clr-brown-500: #AA7D7A;
    --clr-brown-600: #A87C79;
    --clr-brown-700: #A97D7A;
    --clr-brown-800: #9A8473;
    --clr-brown-900: #7B6C66;
    --clr-brown-1000: #4D4643;
    --clr-cream: #FFF8F2;
    --clr-cream-dark: #E8D8CC;
    --clr-black: #000000;
    --clr-white: #ffffff;
    --clr-gray-100: #797979;
    --clr-gray: #363636;
    --gray-line: #d9d9d9;
    --clr-green: #2E6058;
    --clr-green-light: #31635B;
    --clr-yellow: #D7CA98;
}

html {
    scroll-behavior: smooth;
    overflow-x: hidden;
    width: 100%;
    color: var(--clr-gray);
}

body {
    margin: 0;
    width: 100%;
}

header{
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 10; 
    opacity: 90%;
}

main{
    margin-top: 150px;
    min-height: 100vh;
}

section {
    padding-top: 1rem;
    max-width: 100%;
}


/*navbar*/

nav {
    display: none;
}

nav ul {
    list-style-type: none;
}

.nav-item {
    cursor: pointer;
}

.logo{
    /* USE THIS PROJECT TO CHANGE THE COLOR: https://codepen.io/sosuke/pen/Pjoqqp */
    filter: invert(28%) sepia(55%) saturate(365%) hue-rotate(121deg) brightness(99%) contrast(88%);
}


/* Képek */

.fadein {
    position: relative;
    width: 100%;
    height: 40vh;
    top: 0;
    left: 0;
    margin: auto;
}

.fadein img {
    position: absolute;
    height: 100%;
    width: 100%;
    object-fit: cover;
    -webkit-animation-name: fade;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-duration: 9s;
    animation-name: fade;
    animation-iteration-count: infinite;
    animation-duration: 9s;
}

@-webkit-keyframes fade {
    0% {
        opacity: 0;
    }

    20% {
        opacity: 1;
    }

    33% {
        opacity: 1;
    }

    53% {
        opacity: 0;
    }

    100% {
        opacity: 0;
    }
}

@keyframes fade {
    0% {
        opacity: 0;
    }

    20% {
        opacity: 1;
    }

    33% {
        opacity: 1;
    }

    53% {
        opacity: 0;
    }

    100% {
        opacity: 0;
    }
}

#fade-2 {
    animation-delay: -6s;
    -webkit-animation-delay: -6s;
}

#fade-3 {
    animation-delay: -3s;
    -webkit-animation-delay: -3s;
}

.btn {
    font-family: 'Raleway', sans-serif;
    border: 1px solid var(--clr-green);
    border-radius: 10px;
    padding: 10px 40px;
    color: var(--clr-white);
    background-color: var(--clr-green);
    cursor: pointer;
    transition: all 200ms ease-in-out;
    /* font-weight: 100; */
}

.btn:hover {
    font-weight: 400;
    color: var(--clr-green);
    background-color: var(--clr-white);
    border: 1px solid var(--clr-green);
}

.btn-light{
    background-color: var(--clr-white);
    color: var(--clr-green);
}

.btn-light:hover{
    background-color: var(--clr-green);
    color: var(--clr-white);
}

.btn-fadein {
    display: block;
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0);
    bottom: -15px;
    font-size: large;
    font-weight: 600;
}

.btn-news {
    display: none;
    width: 80%;
    padding: 1rem;
    font-size: large;
    font-weight: 600;
}


/* Újdonságok */
.news {
    padding: 2rem 1rem;
    background-image: url(./img/old/background-light.png);
    display: flex;
    flex-direction: column;
    align-items: left;
    justify-content: center;
    color: var(--clr-green);
    font-weight: 600;
}

.news-header {
    width: 80%;
    border: 3px solid var(--clr-yellow);
    font-size: 1rem;
    padding-bottom: 30px;
}

.news-image {
    padding-left: 10px;
    padding-right: 10px;
    filter: invert(91%) sepia(23%) saturate(484%) hue-rotate(352deg) brightness(89%) contrast(88%);
}

.news-text {
    padding-top: 2rem;
    max-width: 80%;
}

.news-season {
    position: relative;
    padding-bottom: 10px;
}

.news-season::after {
    content: "";
    position: absolute;
    height: 3px;
    max-width: 100%;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: var(--clr-yellow);
}

.news-container {
    display: flex;
    flex-direction: column;
}



/* Services */
/*Slider*/
/* Global styles and other CSS rules */
.card-slider {
    max-width: 100%;
    margin: auto;
    overflow-x: scroll;
    white-space: nowrap;
    display: flex;
    /* Remove default margin */
    padding: 2rem;


    /*! hide scrollbar but allow scrolling*/
    /* Remove default padding */
    -ms-overflow-style: none;
    /* for Internet Explorer, Edge */
    scrollbar-width: none;
    /* for Firefox */
    overflow-y: scroll;
}

.card-slider::-webkit-scrollbar {
    display: none;
}

.card {
    flex: 0 0 auto;
    padding: 0px 20px;
    /* Adjust spacing between cards here */
    position: relative;
    transition: all 0.2s ease-in-out;
}

.card:hover {
    transform: scale(1.05);
    cursor: pointer;
}

.card img {
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
    border-radius: 10px;
    max-width: 200px;
    height: 200px;
    object-fit: cover;
}

.card button {
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    left: 50%;
    bottom: 0;
    transform: translate(-50%, 50%);
    border: none;
    /* background-color: var(--clr-brown-400); */
    background-color: var(--clr-yellow);
    color: var(--clr-white);
    font-weight: bold;
    font-size: large;
    padding: 10px 20px;
    border-radius: 10px;
}

/* Additional styles for button and other elements */

/* Services */
.services-slider {
    max-width: 100%;
    /* overflow-x: hidden; */
}
/* ... */

